# JAUs-Startup-Page

./: .gitignore  CHANGELOG.md  FINAL_SUMMARY.md  GIT_GUIDE.md  LICENSE  Makefile  README.md  Startup.html  WARP.md  Windows Terminal settings.json  convert_icon.py  extract_links.py  index.html  index.html.bak  list  pyproject.toml  requirements-dev.txt  requirements-editor.txt  requirements.txt  run  run.ps1  solid-setting.js  startup-dashboard-editor.png.backup  startup_dashboard_editor.py  startup_with_toggle.html  test_dashboard_editor.py
Archive/: Conversation with ChatGPT on JAUs Startup Page 2023-02-05.txt
archive/: solid-setting.css
assets/: startup-dashboard-editor.desktop
docs/: ENHANCEMENTS.md  FONT_STYLING_GUIDE.md  MASONRY_LAYOUT_FIX.md  NEW_TAB_TOGGLE.md  PROMPT_for-Startup-Dashboard-Editor.txt  README-solid-setting.md  REMEMBER_LAST_FILE.md  RENAMED_PROJECT.md  Recommendations for the JAUs-Startup-Page project.txt  SUMMARY.md  UI_IMPROVEMENTS.md  Updating Startup.html to GitHub.md  Updating Startup.html to GitHub.txt  quick-git-update.md
examples/: index.html.bak  test-page.html
resources/icons/: app.icns
src/: generate_dashboard.py  main.py
src/models/: card_model.py
src/utils/: __init__.py  html_parser.py  settings_manager.py  theme_manager.py
src/views/: card_editor.py  main_window.py
static/css/: dashboard.css
static/js/: dashboard.js
tools/: linkchecker.py  parse_links.py  test_dashboard_editor.py  version_checker.py
